--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: rgb(17, 17, 17);
+    color: white;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
